@@ -2,6 +2,7 @@ Revision history for Test-Which
 
 0.02
 	Fix copy and paste Pre-reqs error
+	Added GitHub Actions CI
 
 0.01	Thu Nov 27 21:24:03 EST 2025
         First draft
